[project]
name = "workflow-gallery"
version = "0.1.8"
description = "A ComfyUI custom node that collects generated images into a scrollable in-node gallery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Dylan" }
]
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0"
]

[project.urls]
Repository = "https://github.com/lokitsar/ComfyUI-Workflow-Gallery"

[tool.comfy]
PublisherId = "dylan"
DisplayName = "Workflow Gallery"
Icon = "️"