[project]
name = "workflow-gallery"
# Current release metadata
version = "0.1.20"
description = "A ComfyUI custom node that collects generated images into a scrollable in-node gallery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "lokitsar" }
]
keywords = ["comfyui", "gallery", "images", "workflow", "thumbnails"]
dependencies = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0"
]

[project.urls]
Repository = "https://github.com/lokitsar/ComfyUI-Workflow-Gallery"

[tool.comfy]
PublisherId = "lokitsar"
DisplayName = "Workflow Gallery"
Icon = "🖼️"
